unpackaged/main/default/objects/ESG_Data__c/ESG_Data__c.object-meta.xml
<CustomObject>
    <label>ESG Data</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>ESG Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ESG Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>