unpackaged/main/default/objects/ESG_Data__c/fields/Associated_Well_Name__c.field-meta.xml
<CustomField>
    <fullName>Associated_Well_Name__c</fullName>
    <label>Associated Well Name</label>
    <type>TextArea</type>
</CustomField>