unpackaged/main/default/objects/ESG_Data__c/fields/Bleed_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Bleed_Frequency__c</fullName>
    <label>Bleed Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intermittent</fullName>
            </value>
            <value>
                <fullName>Continuous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>