unpackaged/main/default/objects/ESG_Data__c/fields/Count_of_Level_Pneumatic_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Level_Pneumatic_Pilot__c</fullName>
    <label>Count of Level Pneumatic Pilot</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>