unpackaged/main/default/objects/ESG_Data__c/fields/Count_of_Level_Solenoid__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Level_Solenoid__c</fullName>
    <label>Count of Level Solenoid</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>