unpackaged/main/default/objects/ESG_Data__c/fields/Count_of_On_Off_Pressure_Solenoid__c.field-meta.xml
<CustomField>
    <fullName>Count_of_On_Off_Pressure_Solenoid__c</fullName>
    <label>Count of On/Off Pressure Solenoid</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>