unpackaged/main/default/objects/ESG_Data__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level</fullName>
            </value>
            <value>
                <fullName>Flow Rate</fullName>
            </value>
            <value>
                <fullName>Temperature</fullName>
            </value>
            <value>
                <fullName>Pressure Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>