unpackaged/main/default/objects/ESG_Data__c/fields/High_Low__c.field-meta.xml
<CustomField>
    <fullName>High_Low__c</fullName>
    <label>High or Low Bleed Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>