unpackaged/main/default/objects/ESG_Data__c/fields/Pneumatic_Controller_Make__c.field-meta.xml
<CustomField>
    <fullName>Pneumatic_Controller_Make__c</fullName>
    <label>Pneumatic Controller Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABB I/P</fullName>
            </value>
            <value>
                <fullName>BelGas P8100</fullName>
            </value>
            <value>
                <fullName>Fisher4150</fullName>
            </value>
            <value>
                <fullName>Fisher4160</fullName>
            </value>
            <value>
                <fullName>Fisher C1</fullName>
            </value>
            <value>
                <fullName>Fisher I/P</fullName>
            </value>
            <value>
                <fullName>Norriseal1001A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Siemens I/P</fullName>
            </value>
            <value>
                <fullName>Norriseal 1001</fullName>
            </value>
            <value>
                <fullName>Bmd</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Norriseal 1001 envirosave</fullName>
            </value>
            <value>
                <fullName>Murphy</fullName>
            </value>
            <value>
                <fullName>Norriseal 1001XL</fullName>
            </value>
            <value>
                <fullName>Mallard</fullName>
            </value>
            <value>
                <fullName>Norriseal</fullName>
            </value>
            <value>
                <fullName>Norriseal EVS</fullName>
            </value>
            <value>
                <fullName>Norriseal 1001 sure seal</fullName>
            </value>
            <value>
                <fullName>Norriseal 01-01</fullName>
            </value>
            <value>
                <fullName>Norriseal 1001A</fullName>
            </value>
            <value>
                <fullName>Murphy liquid level controller</fullName>
            </value>
            <value>
                <fullName>Mallard 3201</fullName>
            </value>
            <value>
                <fullName>1001-Norriseal</fullName>
            </value>
            <value>
                <fullName>LC10 liquid level controller (2nd stg)</fullName>
            </value>
            <value>
                <fullName>Norriseal 1001 water level</fullName>
            </value>
            <value>
                <fullName>FW Murphy pneumatic level controller.</fullName>
            </value>
            <value>
                <fullName>CVS series 4150</fullName>
            </value>
            <value>
                <fullName>Murphy L1200N</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>