unpackaged/main/default/objects/ESG_Data__c/fields/Pneumatic_Controller_Make_Custom__c.field-meta.xml
<CustomField>
    <fullName>Pneumatic_Controller_Make_Custom__c</fullName>
    <label>Pneumatic Controller Make - Custom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>