unpackaged/main/default/objects/ESG_Data__c/fields/Type_of_Control__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Control__c</fullName>
    <label>Type of Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Snap Acting</fullName>
            </value>
            <value>
                <fullName>Throttling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>